Change item data model and API to get one news item
